k8s/sentiment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-service-deployment
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: sentiment-service
  template:
    metadata:
      labels:
        app: sentiment-service
    spec:
      containers:
        - name: sentiment-service
          image: gcr.io/sentiment-check-450321/sentiment-service:latest
          ports:
            - containerPort: 5001
