k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 4173
  type: ClusterIP
