k8s/sentiment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-cluster-ip-service
spec:
  selector:
    app: sentiment-service
  ports:
      - port: 8080    
        targetPort: 5001 
  type: ClusterIP
